--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     
-    <title>GQSO</title>
+    <title>React</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
