--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,10 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Encontre um monitor para te ajudar nos estudos ou se torne um e colabore com o aprendizado de outras pessoas"
     />
-    
-    <title>React</title>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;700&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+
+    <title>Monitoria</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
